<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.5">
  <GVL Name="Global_Variables" Id="{c0b1d28b-e518-4a5f-958d-d8114289df10}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	PLCPRJ_BUFFER_SIZE						: UDINT := 1000;	(* Max. internal fifo/receiver buffer size *)
	PLCPRJ_RECEIVE_POLLING_TIME				: TIME := T#0MS;	(* Input polling timer if needed to limit the interval. Not in this case *)
	PLCPRJ_RECEIVE_TIMEOUT					: TIME := T#10S;	(* Timeout when receiving. Start waiting new connection. Usually disconnected by peer error triggers it *)

	(* Some project specific error codes *)
	PLCPRJ_ERROR_RECEIVE_TIMEOUT			: UDINT := 16#8101;(* Receive timeout *)
	PLCPRJ_ERROR_SENDFIFO_OVERFLOW			: UDINT := 16#8102;(* Send fifo overflow *)
	PLCPRJ_ERROR_RECFIFO_OVERFLOW			: UDINT := 16#8103;(* Receive fifo overflow *)
	PLCPRJ_ERROR_INVALID_FRAME_FORMAT		: UDINT := 16#8104;(* Invalid frame format/data *)
	
	PLCPRJ_CRUISE_CONTROL_SET				: LREAL := 20;	(* Max. internal fifo/receiver buffer size *)
END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>